--- a/genindex.html
+++ b/genindex.html
@@ -212,6 +212,8 @@
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/pathpy.Edge.delete.html#pathpy.Edge.delete">delete() (pathpy.Edge method)</a>
+</li>
       <li><a href="generated/pathpy.Edge.directed.html#pathpy.Edge.directed">directed() (pathpy.Edge property)</a>
 
       <ul>
@@ -348,9 +350,13 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/pathpy.Network.summary.html#pathpy.Network.summary">summary() (pathpy.Network method)</a>
+      <li><a href="generated/pathpy.Edge.summary.html#pathpy.Edge.summary">summary() (pathpy.Edge method)</a>
 
       <ul>
+        <li><a href="generated/pathpy.Network.summary.html#pathpy.Network.summary">(pathpy.Network method)</a>
+</li>
+        <li><a href="generated/pathpy.Node.summary.html#pathpy.Node.summary">(pathpy.Node method)</a>
+</li>
         <li><a href="generated/pathpy.Path.summary.html#pathpy.Path.summary">(pathpy.Path method)</a>
 </li>
       </ul></li>
